# TickZero

./: .gitignore  BingSiteAuth.xml  CNAME  CONTRIBUTING.md  LICENSE  LOGO_PROMPTS.md  QUICKSTART.md  README.md  README_GHPAGES.md  SEARCH_CONSOLE_SETUP.md  SETUP_GEMINI.md  ai_director.py  config.json  finalize_site.py  fix_translations.py  gamestate_integration_highlights.cfg  gsi_server.py  index.de.html  index.es.html  index.fr.html  index.html  index.it.html  index.ru.html  index.zh.html  launcher.py  llms.txt  main.py  match_database.py  matches.db  noxfile.py  obs_manager.py  privacy-policy.html  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  translate_french.py  translate_italian.py  translate_remaining.py  update_lang_pages.py  (+4 more)
.github/workflows/: update-stats.yml
assets/css/: cookie-consent.css  flags.css  flags.min.css  style.css  style.min.css
assets/data/: stats.json
assets/js/: cookie-consent.js  main.js  main.min.js
de/: index.html
docs/: MATCH_HISTORY.md  RELEASE_NOTES.md  SECURITY_FIXES.md
docs/i18n/: QUICKSTART.it.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ru.md  README.zh.md  SETUP_GEMINI.it.md
es/: index.html
examples/: example_match_log.json  list_models.py  test_gemini_api.py  test_gsi.py  test_obs.py  test_video.py
fr/: index.html
it/: index.html
ru/: index.html
src/: main.py
src/core/: ai_director.py  (+2 more)
templates/: base.html  index.html  match_detail.html  match_list.html
tests/: README.md  test_api_key.py  test_gsi_map_phase.py  test_obs_recording.py  test_obs_simple.py
zh/: index.html
(+14 files in other folders)
